# curse

./: README.md  components.db  curse  eldorado.py  main.py  pyproject.toml  requirements.txt  search.py  sitilink.py
curse/: components.db  config.py  eldorado.py  main.py  search.py  sitilink.py
